--- a/style.css
+++ b/style.css
@@ -1,11 +1,9 @@
-/* General */
-/* Styling for the body */
 .body1 {
     height: 2500px;
     background-color: gold;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    margin: 0px;
+    margin-left: 0px;
 }
 
 .body2 {
@@ -44,39 +42,35 @@
     margin-left: -1px;
 }
 
-/* Styling for the header */
 header {
-    position: fixed; /* Fix the header to the top of the viewport */
+    position: fixed;
     background-color: gold;
     margin-top: -80px;
     width: 100%;
     height: 80px;
-    z-index: 1000; /* Ensure the header is above other elements */
+    z-index: 100; 
 }
 
-/* Styling for the heading */
 h1 {
     font-family: "Bebas Neue";
     position: fixed;
     font-size: 55px;
-    margin: 0; /* Remove margin on all sides */
+    margin: 0;
     margin-top: 0px;
     padding-top: 8px;
     width: 380px;
-    padding-left: 20px; /* Add padding instead of margin for left spacing */
+    padding-left: 20px;
     color: black;
 }
 
-/* Styles for the navigation bar */
 .navbar {
-    position: fixed; /* Fix the navbar position */
+    position: fixed;
     top: 0;
     right: 0;
     margin-right: 100px;
     padding: 20px;
 }
 
-/* Styles for list items inside the navbar */
 .navbar li {
     display: inline-block; 
     padding: 0;
@@ -84,91 +78,82 @@ h1 {
     position: relative;
 }
 
-/* Pseudo-element for creating a sliding background effect */
 .navbar li::before {
-    content: ''; /* Add content to pseudo-element */
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
-    width: 0; /* Initially set width to 0 */
+    width: 0;
     height: 100%;
     background-color: black;
-    z-index: -1; /* Move behind the list item */
-    transition: width 0.2s ease; /* Transition width */
+    z-index: -1;
+    transition: width 0.2s ease;
 }
 
-/* Expand the pseudo-element width on hover */
 .navbar li:hover::before {
-    width: 100%; /* Expand width on hover */
+    width: 100%;
 }
 
-/* Styles for anchor tags inside the navbar */
 .navbar a {
     font-family: "Radio Canada Big";
     font-size: large;
     color: black;
     padding: 20px;
-    text-decoration: none; /* Remove underline */
+    text-decoration: none;
 }
 
-/* Change text color on hover */
+
 .navbar a:hover {
     color: gold;
 }
 
-/* Home */
-/* Styling for the slider container */
 .slider-container {
-    position: relative; /* Set positioning context to relative */
+    position: relative;
     width: 1912px;
     height: 690px;
-    overflow: hidden; /* Hide overflow content */
-    margin-top: 80px; /* Space the slider below the header */
+    overflow: hidden;
+    margin-top: 80px;
     margin-left: -9px;
 }
 
-/* Styling for the slider */
+
 .slider {
-    display: flex; /* Use flexbox layout */
-    transition: transform 1s ease-in-out; /* Apply smooth transition to slider transformation */
+    display: flex;
+    transition: transform 1s ease-in-out;
     width: 100%;
 }
 
-/* Styling for individual slides */
 .slide {
-    flex: 0 0 auto; /* Allow auto-sizing of slides */
+    flex: 0 0 auto;
     width: 100%;
     height: 690px;
 }
 
-/* Styling for slide images */
 .slide img {
-    width: 100%; /* Set image width to 100% of its container */
-    height: 100%; /* Set image height to 100% of its container */
-    object-fit: cover; /* Ensure the image covers the entire container */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-/* Styling for manual navigation */
+
 .manual-navigation {
-    position: absolute; /* Set positioning context to absolute */
+    position: absolute;
     bottom: 20px;
     left: 50%;
-    transform: translateX(-50%); /* Center the navigation horizontally */
+    transform: translateX(-50%);
 }
 
-/* Styling for individual navigation buttons */
 .manual-btn {
-    display: inline-block; /* Make buttons inline-block */
-    width: 10px; /* Set button width to 10 pixels */
-    height: 10px; /* Set button height to 10 pixels */
-    border-radius: 50%; /* Make buttons circular */
+    display: inline-block;
+    width: 10px;
+    height: 10px; 
+    border-radius: 50%;
     background-color: white;
-    margin: 5px; /* Add margin around each button */
-    cursor: pointer; /* Change cursor to pointer on hover */
-    transition: 1s; /* Apply smooth transition */
+    margin: 5px;
+    cursor: pointer;
+    transition: 1s; 
 }
 
-/* Styling for hover effect on navigation buttons */
 .manual-btn:hover {
     background: black;
 }
@@ -231,32 +216,32 @@ h1 {
     color: black;
     text-align: center;
     border: 2px solid black;
-    background-color: gold; /* Set initial background color */
-    transition: background-color 0.5s ease; /* Add transition for background color */
+    background-color: gold;
+    transition: background-color 0.5s ease;
 }
 
-/* Change background color on hover */
 .preview-text1 a:hover,
 .preview-text2 a:hover {
-    background-color: black; /* Change background color on hover */
-    color: gold; /* Change text color on hover */
+    background-color: black;
+    color: gold;
 }
 
 footer {
-    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 160px;
     width: 1904px;
     margin: 177px 0px 0px 0px;
     background-color: black;
-    align-content: center;
 }
 
 footer p {
     color: gold;
-    margin: 0px 0px 0px 900px;
     font-size: 20px;
+    margin: 0;
 }
 
-/* Menu */
 .menu-description {
     position: absolute;
     height: 200px;
@@ -285,33 +270,33 @@ footer p {
     color: black;
     text-align: center;
     border: 2px solid black;
-    background-color: gold; /* Set initial background color */
+    background-color: gold;
     transition: background-color 0.5s ease;
 }
 
 .menu-description a:hover {
-    background-color: black; /* Change background color on hover */
-    color: gold; /* Change text color on hover */
+    background-color: black;
+    color: gold;
 }
 
 .bbq {
     position: absolute;
     display: flex;
-    flex-direction: column; /* Stacks children vertically */
-    align-items: center; /* Centers children horizontally */
-    padding: 20px; /* Optional padding */
-    width: 500px; /* Optional width */
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 500px;
     margin: 400px 0px 0px 300px;
 }
 
 .bbq img {
-    max-width: 100%; /* Ensures the image fits within the container */
-    height: auto; /* Maintains the aspect ratio */
+    max-width: 100%;
+    height: auto;
 }
 
 .bbq-description {
-    text-align: center; /* Centers text */
-    margin-top: 20px; /* Adds space between the image and the description */
+    text-align: center;
+    margin-top: 20px;
 }
 
 .bbq h1 {
@@ -346,21 +331,21 @@ footer p {
 .burger {
     position: absolute;
     display: flex;
-    flex-direction: column; /* Stacks children vertically */
-    align-items: center; /* Centers children horizontally */
-    padding: 20px; /* Optional padding */
-    width: 500px; /* Optional width */
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 500px;
     margin: 400px 0px 0px 1000px;
 }
 
 .burger img {
-    max-width: 100%; /* Ensures the image fits within the container */
-    height: auto; /* Maintains the aspect ratio */
+    max-width: 100%;
+    height: auto;
 }
 
 .burger-description {
-    text-align: center; /* Centers text */
-    margin-top: 42px; /* Adds space between the image and the description */
+    text-align: center;
+    margin-top: 42px;
 }
 
 .burger h1 {
@@ -395,21 +380,21 @@ footer p {
 .sides {
     position: absolute;
     display: flex;
-    flex-direction: column; /* Stacks children vertically */
-    align-items: center; /* Centers children horizontally */
-    padding: 20px; /* Optional padding */
-    width: 500px; /* Optional width */
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 500px;
     margin: 1850px 0px 0px 300px;
 }
 
 .sides img {
-    max-width: 100%; /* Ensures the image fits within the container */
-    height: auto; /* Maintains the aspect ratio */
+    max-width: 100%;
+    height: auto;
 }
 
 .sides-description {
-    text-align: center; /* Centers text */
-    margin-top: 20px; /* Adds space between the image and the description */
+    text-align: center;
+    margin-top: 20px;
 }
 
 .sides h1 {
@@ -444,21 +429,21 @@ footer p {
 .drinks {
     position: absolute;
     display: flex;
-    flex-direction: column; /* Stacks children vertically */
-    align-items: center; /* Centers children horizontally */
-    padding: 20px; /* Optional padding */
-    width: 500px; /* Optional width */
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 500px;
     margin: 1850px 0px 0px 1000px;
 }
 
 .drinks img {
-    max-width: 100%; /* Ensures the image fits within the container */
-    height: auto; /* Maintains the aspect ratio */
+    max-width: 100%;
+    height: auto;
 }
 
 .drinks-description {
-    text-align: center; /* Centers text */
-    margin-top: 42px; /* Adds space between the image and the description */
+    text-align: center;
+    margin-top: 42px;
 }
 
 .drinks h1 {
@@ -493,21 +478,21 @@ footer p {
 .cater {
     position: absolute;
     display: flex;
-    flex-direction: column; /* Stacks children vertically */
-    align-items: center; /* Centers children horizontally */
-    padding: 20px; /* Optional padding */
-    width: 500px; /* Optional width */
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 500px;
     margin: 3350px 0px 0px 300px;
 }
 
 .cater img {
-    max-width: 100%; /* Ensures the image fits within the container */
-    height: auto; /* Maintains the aspect ratio */
+    max-width: 100%;
+    height: auto; 
 }
 
 .cater-description {
-    text-align: center; /* Centers text */
-    margin-top: 20px; /* Adds space between the image and the description */
+    text-align: center;
+    margin-top: 20px;
 }
 
 .cater h1 {
@@ -542,10 +527,10 @@ footer p {
 .why {
     position: absolute;
     display: flex;
-    flex-direction: column; /* Stacks children vertically */
-    align-items: center; /* Centers children horizontally */
-    padding: 20px; /* Optional padding */
-    width: 500px; /* Optional width */
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 500px;
     margin: 3315px 0px 0px 1000px;
 }
 
@@ -556,8 +541,8 @@ footer p {
 }
 
 .why-description {
-    text-align: center; /* Centers text */
-    margin-top: -10px; /* Adds space between the image and the description */
+    text-align: center;
+    margin-top: -10px;
 }
 
 .why-description h2 {
@@ -582,8 +567,6 @@ footer p {
     font-weight: bold;
 }
 
-/* Order */
-
 .bbq-header {
     position: absolute;
     font-family: "Anton";
@@ -594,10 +577,10 @@ footer p {
     position: absolute;
     display: flex;
     border-radius: 15px;
-    flex-direction: row; /* Stacks children vertically */
-    align-items: center; /* Centers children horizontally */
+    flex-direction: row;
+    align-items: center;
     background-color: #e0e0e0;
-    width: 600px; /* Optional width */
+    width: 600px;
     margin: 150px 0px 0px 340px;
 }
 
@@ -627,10 +610,10 @@ footer p {
     position: absolute;
     display: flex;
     border-radius: 15px;
-    flex-direction: row; /* Stacks children vertically */
-    align-items: center; /* Centers children horizontally */
+    flex-direction: row;
+    align-items: center;
     background-color: #e0e0e0;
-    width: 600px; /* Optional width */
+    width: 600px;
     margin: 150px 0px 0px 962px;
 }
 
@@ -654,10 +637,10 @@ footer p {
     position: absolute;
     display: flex;
     border-radius: 15px;
-    flex-direction: row; /* Stacks children vertically */
-    align-items: center; /* Centers children horizontally */
+    flex-direction: row;
+    align-items: center;
     background-color: #e0e0e0;
-    width: 600px; /* Optional width */
+    width: 600px;
     margin: 310px 0px 0px 340px;
 }
 
@@ -681,10 +664,10 @@ footer p {
     position: absolute;
     display: flex;
     border-radius: 15px;
-    flex-direction: row; /* Stacks children vertically */
-    align-items: center; /* Centers children horizontally */
+    flex-direction: row;
+    align-items: center;
     background-color: #e0e0e0;
-    width: 600px; /* Optional width */
+    width: 600px;
     margin: 310px 0px 0px 962px;
 }
 
@@ -708,10 +691,10 @@ footer p {
     position: absolute;
     display: flex;
     border-radius: 15px;
-    flex-direction: row; /* Stacks children vertically */
-    align-items: center; /* Centers children horizontally */
+    flex-direction: row;
+    align-items: center;
     background-color: #e0e0e0;
-    width: 600px; /* Optional width */
+    width: 600px;
     margin: 469px 0px 0px 340px;
 }
 
@@ -738,8 +721,8 @@ footer p {
     align-items: center;
     flex-grow: 1;
     width: 100%;
-    height: 775px; /* Make sure the main content takes the full viewport height */
-    margin-top: 60px; /* Adjust margin to account for fixed navbar height */
+    height: 775px;
+    margin-top: 60px;
 }
 .contact-container {
     font-family: "Bebas Neue";
@@ -747,7 +730,7 @@ footer p {
     text-align: center;
     padding: 20px;
     color: gold;
-    background-color: black; /* Slightly transparent background */
+    background-color: black;
     border-radius: 10px;
     height: 500px;
     width: 80%;
@@ -760,13 +743,13 @@ footer p {
     align-items: center;
     flex-grow: 1;
     width: 100%;
-    height: 775px; /* Make sure the main content takes the full viewport height */
-    margin-top: 60px; /* Adjust margin to account for fixed navbar height */
+    height: 775px;
+    margin-top: 60px;
 }
 .contact-container {
     text-align: center;
     padding: 20px;
-    background-color: black; /* Slightly transparent background */
+    background-color: black;
     border-radius: 10px;
     height: 500px;
     width: 80%;
@@ -803,6 +786,6 @@ footer p {
 
 .male {
     position: absolute;
-    top: 325px; /* Adjust as needed */
-    left: 268px; /* Adjust as needed */
+    top: 325px;
+    left: 268px;
 }
